Bug 304878 - Dolphin shows "ghost" folders in places after autofs umount nfs shares
Summary: Dolphin shows "ghost" folders in places after autofs umount nfs shares
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: places (other bugs)
Version First Reported In: 2.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: regression
: 304888 306521 306897 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-08-09 18:51 UTC by regi.hops
Modified: 2012-09-20 16:01 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.2
Sentry Crash Report:


Attachments
Places before auto mounting nfs shares (20.06 KB, image/png)
2012-08-09 18:52 UTC, regi.hops
Details
Places after auto mounting nfs shares (28.06 KB, image/png)
2012-08-09 18:53 UTC, regi.hops
Details
Places after automatically unmounting the nfs shares (18.56 KB, image/png)
2012-08-09 18:54 UTC, regi.hops
Details

Note You need to log in before you can comment on or make changes to this bug.
Description regi.hops 2012-08-09 18:51:01 UTC
I have some NFS shares mounted with autofs.
When I start dolphin no NFS shares are listed under devices, which is correct as they are not mounted (see screenshot1.png).
Now I access the shares and dolphin shows them in the places under devices (see screenshot2.png).
After a while - in my case 20 sec. the timeout for autofs - the shares are unmounted and disappear in the device section.
But at the same time dolphin creates for every unmounted share an empty (ghost) folder in the places section (see screenshot3.png), which stay until you close dolphin.



Reproducible: Always

Steps to Reproduce:
1. create NFS share with autofs
2. access the share with dolphin
3. go to a local folder and wait until autofs unmount the shares
Actual Results:  
"ghost" folder entries in the places section

Expected Results:  
No "ghost" folder entries

See screenshots
Comment 1 regi.hops 2012-08-09 18:52:57 UTC
Created attachment 73071 [details]
Places before auto mounting nfs shares
Comment 2 regi.hops 2012-08-09 18:53:52 UTC
Created attachment 73072 [details]
Places after auto mounting nfs shares
Comment 3 regi.hops 2012-08-09 18:54:57 UTC
Created attachment 73073 [details]
Places after automatically unmounting the nfs shares
Comment 4 regi.hops 2012-08-09 18:59:19 UTC
BTW: This is the best dolphin ever - even with some bugs ;-) - great work!
Comment 5 Frank Reininghaus 2012-08-09 21:14:41 UTC
Thanks for the bug report! Very strange issue! Unfortunately, I can't reproduce this with my setup here, but maybe someone else has an idea.

> BTW: This is the best dolphin ever - even with some bugs ;-) - great work!

Thanks :-)
Comment 6 Frank Reininghaus 2012-08-09 21:20:43 UTC
The recently reported bug 304888 looks similar and indicates that this can also be reproduced with removable USB drives. I'll try to reproduce that (not possible currently at the computer where I'm sitting right now).
Comment 7 david.martin.it 2012-08-09 22:18:42 UTC
(In reply to comment #6)
> The recently reported bug 304888 looks similar and indicates that this can
> also be reproduced with removable USB drives. I'll try to reproduce that
> (not possible currently at the computer where I'm sitting right now).

This bug has been introduced with KDE SC 4.9, I've never seen this problem before.
I've no nfs share to test bug 304878.
Comment 8 Jekyll Wu 2012-08-10 00:19:40 UTC
*** Bug 304888 has been marked as a duplicate of this bug. ***
Comment 9 Weng Xuetian 2012-08-14 05:46:48 UTC
My way to reproduce it:
1. open dolphin
2. plug a usb disk
3. mount a partition
4. unplug without unmount it.
5. ghost entry appears.
Comment 10 Frank Reininghaus 2012-08-14 08:58:17 UTC
Thanks, I could reproduce this now with a USB memory stick. As soon as I 'safely remove' it using the context menu, the 'ghost entry' appears. Looks like a regression caused by the recent Places Panel rewrite.
Comment 11 Jeroen van Meeuwen (Kolab Systems) 2012-08-24 16:19:43 UTC
Resetting assignee to default as per bug #305719
Comment 12 Jekyll Wu 2012-09-09 22:02:28 UTC
*** Bug 306521 has been marked as a duplicate of this bug. ***
Comment 13 Emmanuel Pescosta 2012-09-16 19:39:41 UTC
Review: https://git.reviewboard.kde.org/r/106456/

Please test it ;)
Comment 14 Jekyll Wu 2012-09-17 00:41:36 UTC
*** Bug 306897 has been marked as a duplicate of this bug. ***
Comment 15 Emmanuel Pescosta 2012-09-20 16:01:11 UTC
Git commit 068b6297ee33902afdd9759ac5208b30590ff71d by Emmanuel Pescosta.
Committed on 20/09/2012 at 17:56.
Pushed by emmanuelp into branch 'KDE/4.9'.

Fixes Bug 304878 - Dolphin shows "ghost" folders in places after autofs umount nfs shares
REVIEW: 106456
FIXED-IN: 4.9.2

M  +16   -5    dolphin/src/panels/places/placesitemmodel.cpp

http://commits.kde.org/kde-baseapps/068b6297ee33902afdd9759ac5208b30590ff71d