Fixes Bug 304878 - Dolphin shows "ghost" folders in places after autofs umount nfs shares

BUG: 304878
REVIEW: 106456
FIXED-IN: 4.9.2